--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "cordova-plugin-browsersync-gen2",
-    "id": "cordova-plugin-browsersync-gen2",
-    "version": "1.1.7",
+    "name": "cordova-plugin-browsersync",
+    "id": "cordova-plugin-browsersync",
+    "version": "1.2.0",
     "description": "A fork of original Cordova Plugin to integrate browser-sync in the workflow",
     "main": "lib/index.js",
-    "author": "Dimitris - Rafail Katsampas <katsampasdr@gmail.com>",
+    "author": "Sergey Antonov <superflasher22@gmail.com>",
     "license": "Apache-2.0",
     "cordova": {
-        "id": "cordova-plugin-browsersync-gen2",
+        "id": "cordova-plugin-browsersync",
         "platforms": [
             "android",
             "browser",
@@ -24,7 +24,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/DimitrisRK/cordova-plugin-browsersync-gen2.git"
+        "url": "https://github.com/AntonovSergey2211/cordova-plugin-browsersync.git"
     },
     "dependencies": {
         "browser-sync": "^2.26.0",
